--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -17,7 +17,7 @@
   background-color: white;
   color: black;
   top: 0;
-  z-index: 1000;
+  z-index: 999;
   position: sticky;
 }
 
